--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <div id = "container">
         <div id = "main-header">
             <div id = "brand-name">THE <em>WRTG3030</em> TIMES</div>
+            <div id = "brand-name">THE <em>WRTG3030</em> TIMES</div>
+            <div id = "brand-name">THE <em>WRTG3030</em> TIMES</div>
+            <div id = "brand-name">THE <em>WRTG3030</em> TIMES</div>
+            <div id = "brand-name">THE <em>WRTG3030</em> TIMES</div>
         </div>
         <div id = "article">
             <div id = "article-header">
