--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <head>
-    <title>OTLOTD</title>
+    <title>TheWRTG3030Times</title>
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
@@ -11,11 +11,11 @@
         <div id = "article">
             <div id = "article-header">
                 <div id = "article-title">ON THE LIPS OF THE DYING</div>
-                <div id = "article-sub-title">— Consequences of Politics in a Scientific World —</div>
+                <div id = "article-sub-title">Consequences of Politics in a Scientific World</div>
                 <div id = "article-by-line">by Andrew Yonan, MAY 26, 2023</div>
             </div>
             <div id = "article-text-container">
-                <p id = "article-text">
+                <p class = "article-text">
                    
 
                     “I have no time!”
@@ -53,8 +53,18 @@ Even for the brightest, it required an exceptional study regime and willingness 
 Disappointed, he resolved to make a herculean effort over the next few months, working only on mathematics, to secure what he believed was his rightful place among his sharp-minded equals and political breed. Come next year, his final chance would be upon him.
 <br><br>
 It was at this point that he began work on the theory which would later etch his name among the immortals of his discipline. Having developed a pristine understanding of geometry, Galois threw this knowledge full-force into analyzing the roots (solutions) of polynomial equations. Although his methods were more nuanced, the gist of the work revolved around a singular realization: the roots of polynomial equations were somehow, and seemingly out of nowhere, related to the symmetries of regular polygons (triangles, squares, pentagons, .  . .). A discovery of this caliber would surely vault him through the gates of the École.
-<br><br>
-Much like star athletes, prospective mathematicians found mentors to coach them and “referee” their papers. Galois chose possibly the most difficult target he could have, opting for Cauchy. As a current professor of the École, he had gained infamy for his aggressively-abstract lectures, jam-packed with the most obscure of ideas, and directed only at the mentally-hardiest of his students. Known to dismiss all current research other than his own, Cauchy was perhaps the paragon of academic snobbery.
+
+<div class = "image-container">
+    <img id = "portrait" src = "images/symmetry.jpg">
+    <div class = "image-footer">
+        <p class = "image-text">
+            The symmetries of polygons are the basis on which Galois built the idea of a <em>group</em> and which would later underpin ideas of symmetry found in <em>abstract algebra</em>. Shown in the image are the reflectional symmetries of a triangle, square, pentagon, and hexagon.
+        </p>
+    </div>
+</div>
+
+<p class = "article-text">
+Much like star athletes, prospective mathematicians found mentors to coach them and “referee” their papers. Galois chose possibly the most difficult target he could have, opting for Cauchy. As a current professor of the École, Cauchy had gained infamy for his aggressively-abstract lectures, jam-packed with the most obscure of ideas, and directed only at the mentally-hardiest of his students. Known to dismiss all current research other than his own, Cauchy was perhaps the paragon of academic snobbery.
 <br><br>
 After a series of complicated interactions, and, seeing the potential importance of the work, Cauchy agreed to present Galois’ manuscript at the next meeting for the Academy of Sciences. But an ill-fated sickness held the professor home the day of the presentation, and the following week he was scheduled to present his own work again. Galois’ ideas were <a href = "https://www.target.com/p/symmetry-by-marcus-du-sautoy-paperback/-/A-77247401">left in the shadows</a> along with his manuscript, which, as some historians conjecture, was also left to languish in Cauchy’s office.
 <br><br>
@@ -109,6 +119,16 @@ Galois’ funeral ended in quiet and solitude.
 Although prior mathematicians had referred to similar collections of geometric symmetries, it was Galois who first named them <a href = "https://math.mit.edu/~jwellens/Group%20Theory%20Forum.pdf"> <em>groups</em> </a> and demonstrated their power in analyzing polynomial equations. Despite its simplicity, this is the discovery that, ten years after his death, would begin to steer the helm of mathematics into novel waters—the field known today as <a href = "https://math.berkeley.edu/~apaulin/AbstractAlgebra.pdf"> <em>abstract algebra</em> </a>. The more general field of <a href = "https://arxiv.org/pdf/1809.05923.pdf"> <em>category theory</em> </a> bloomed from this and now has extensive applications in computer science and other modern branches of mathematics. Today for instance, some of its ideas apply to chemical reaction networks and natural language processing. The fact that Galois managed to develop the foundations of an entire field of mathematics in just three years, from the age of seventeen to twenty, also while drowning in the chaos of the July Revolution, is in itself astounding. 
 <br><br>
 But as is wont with history’s poster children, the hidden talent never saw the world’s eye until decades after burial. Whether at fault was the loss of his manuscripts, or his exclusion from the École Polytechnique, Galois’ unraveling may be attributed to the animosity of the times. The French Revolution and its following years witnessed humans at the peak of their cruelty, and its storied accounts stand as some of the most tragic. There ended the life of a curious boy, a pupil of science, strafed and stolen by the politics of his era—compelled to a death as pointless as it was heartrending. Such was the fate of a child, born amid a storm and forever marred by its warfare.
+</p>
+
+<div class = "image-container">
+    <img id = "portrait" src = "images/GaloisPortrait.png">
+    <div class = "image-footer">
+        <p class = "image-text">
+            Portrait of Évariste Galois ("Évariste Galois (1811-1832)", Rigatelli, Laura)
+        </p>
+    </div>
+</div>
 
 
     
