--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id = "article-header">
                 <div id = "article-title">ON THE LIPS OF THE DYING</div>
                 <div id = "article-sub-title">The Cost of Politics in a Scientific World</div>
-                <div id = "article-by-line">by Andrew Yonan, MAY 26, 2023</div>
+                <div id = "article-by-line">by Andrew Yonan, MAY 31, 2023</div>
             </div>
             <div id = "article-text-container">
                 <p class = "article-text">
@@ -42,7 +42,7 @@ Having learned Latin and Greek from his mother, Galois managed to scrape by in t
 <br><br>
 In what can only be described as a fit of addiction, Galois abandoned all his classes in the name of this newfound escape. He began reading the original works of <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Lagrange/">Joseph-Louis Lagrange</a>, a name stamped in many corners of physics and mathematics today. 
 <br><br>
-As his interest in non-mathematical studies drained, Galois suffered under the school’s disciplinary obsessions. His regular detentions provoked a range of descriptions from his humanities instructors: “He is under the spell of mathematics. [. . .] There is nothing in his work except strange fantasies and negligence; he always does what he should not do. [. . .]  His ambition, his frequently ostentatious originality, his bizarre character keep him isolated from his school fellows.” He must have <em>really</em> managed to get on their nerves, given that his own teachers were now criticizing him for being original.
+As his interest in non-mathematical studies drained, Galois suffered under the school’s disciplinary obsessions. His regular detentions provoked a range of descriptions from his humanities instructors: “He is under the spell of mathematics. [. . .] There is nothing in his work except strange fantasies and negligence; he always does what he should not do. [. . .]  His ambition, his frequently ostentatious originality, his bizarre character keep him isolated from his school fellows.” He must have <em>really</em> managed to irritate them, given that his own teachers were now criticizing him for being original.
 <br><br>
 In June of 1828, at the age of 16, against the advice of his superiors, Galois took the <a href = https://mathshistory.st-andrews.ac.uk/Strick/galois.pdf>entrance exam</a> for the École Polytechnique of Paris—one of Europe’s leading colleges. It was an oral exam in which candidates produced a series of mathematical proofs for a panel of examiners, with nothing but a piece of chalk, a blackboard, and their mind to help them. Acceptance was so competitive that applicants were permanently barred from entry after just two failed attempts. Besides the École’s rich academic offering, it was a lone revolutionary pinnacle in an ocean of growing loyalist institutions. Legislative tides waned for the republic, and day by day, the Ultras slipped themselves back into powerful positions. The École was a potential haven for Galois, and, in all respects, a dream school.
 <br><br>
@@ -127,7 +127,7 @@ But as is wont with history’s poster children, the hidden talent never saw the
     <img id = "portrait" src = "images/GaloisPortrait.png">
     <div class = "image-footer">
         <p class = "image-text">
-            Portrait of Évariste Galois ("Évariste Galois (1811-1832)", Rigatelli, Laura)
+            Portrait of Évariste Galois (Laura Toti Rigatelli)
         </p>
     </div>
 </div>
@@ -135,21 +135,246 @@ But as is wont with history’s poster children, the hidden talent never saw the
 
     
                 </p>
-
-                <div id = "bibliography">
-                    <h3 id = "bib-title">BIBLIOGRAPHY</h3>
-                    <p id = "bib-text">
-
-                        Du Sautoy, Marcus. Symmetry: A Journey into the Patterns of Nature. Broadway, New York, NY: Harper Collins, 2008. 
-                        <br><br>
-                        John O’Conner, Edmund Robertson. “Evariste Galois”. MacTutor. School of Mathematics and Statistics, University of St. Andrews, 1996.
-                        <br><br>
-                        Rigatelli, Laura. Evariste Galois (1811-1832). Washington D.C: Library of Congress, 1996.
-                        <br><br>
-                        <a href = "https://palmer.wellesley.edu/~ivolic/pdf/Classes/MATH306GaloisTheorySpring12/Handouts/GaloisBio.pdf">Galois' biography</a>
-                    </p>
-                </div>
             </div>
+        </div>
+        <div id = "bibliography">
+            <h3 id = "bib-title">BIBLIOGRAPHY</h3>
+                <ol>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                “About: Lycée Louis-le-Grand.” DBPedia. <a href = "https://dbpedia.org/page/Lyc%C3%A9e_Louis-le-Grand">https://dbpedia.org/page/Lyc%C3%A9e_Louis-le-Grand</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                “Augustin-Louis Cauchy (1789—1857).” Wikipedia. <a href = "https://shellbuckling.com/cv/cauchy.pdf">https://shellbuckling.com/cv/cauchy.pdf</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Blackwell, Richard. “Joseph Fourier: Father of Digital Audio Processing.” Ravepubs. 2015. <a href = "https://www.ravepubs.com/joseph-fourier-father-digital-audio-processing/">https://www.ravepubs.com/joseph-fourier-father-digital-audio-processing/ </a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Bradley, Tai-Danae. “What is Applied Category Theory?” Cuny Graduate Center, Department of Mathematics. <a href = "https://arxiv.org/pdf/1809.05923.pdf">https://arxiv.org/pdf/1809.05923.pdf</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Brook, Marissa, J. A. Macfarlane. “Radical Solutions.” Damn Interesting. 2020. <a href = "https://www.damninteresting.com/radical-solutions/">https://www.damninteresting.com/radical-solutions/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Davidson, Brian. “Siméon Denis Poisson: Mathematics in the Service of Science.” MIR Library.  Pierre and Marie Curie University. 2014. <a href = "https://web.mat.upc.edu/eva.miranda/Catalogue_English.pdf">https://web.mat.upc.edu/eva.miranda/Catalogue_English.pdf</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Dosseva, Annamaria. “The Fortunes and Misfortunes of Revolutionary France and Évariste Galois.” 2011. <a href = "https://csclub.uwaterloo.ca/~mdosseva/Galois.pdf">https://csclub.uwaterloo.ca/~mdosseva/Galois.pdf</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Du Sautoy, Marcus. <em>Symmetry: A Journey into the Patterns of Nature</em>. Broadway, New York, NY: Harper Collins, 2008. <a href = "https://www.amazon.com/Symmetry-Journey-into-Patterns-Nature/dp/0060789417">https://www.amazon.com/Symmetry-Journey-into-Patterns-Nature/dp/0060789417</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                ““How the Poor Die” by George Orwell, 1946. ” Hektoen International Journal. Hektoen Institute of Medicine. 2012. <a href = "https://hekint.org/2017/02/01/how-the-poor-die-by-george-orwell-1946/">https://hekint.org/2017/02/01/how-the-poor-die-by-george-orwell-1946/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Kekes, John. “Why Robespierre Chose Terror.” City Journal. 2006. <a href = "https://www.city-journal.org/article/why-robespierre-chose-terror">https://www.city-journal.org/article/why-robespierre-chose-terror</a> 
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Kruglinski, Susan. “Mysterious Death of a Mathematician Finally Solved?” Discover. Discover Magazine. 2005. <a href = "https://www.discovermagazine.com/the-sciences/mysterious-death-of-a-mathematician-finally-solved">https://www.discovermagazine.com/the-sciences/mysterious-death-of-a-mathematician-finally-solved</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                “Life of Galois.” Wellesley College. <a href = "https://palmer.wellesley.edu/~ivolic/pdf/Classes/MATH306GaloisTheorySpring12/Handouts/GaloisBio.pdf">https://palmer.wellesley.edu/~ivolic/pdf/Classes/MATH306GaloisTheorySpring12/Handouts/GaloisBio.pdf</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                “Louis XVIII of France.” <a href = "http://www.1066.co.nz/Mosaic%20DVD/whoswho/text/Louis_XVIII_of_France[1].htm">http://www.1066.co.nz/Mosaic%20DVD/whoswho/text/Louis_XVIII_of_France[1].htm</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                “Napoleonic Satires.” Center for Digital Scholarship. Brown University. <a href = "https://library.brown.edu/cds/napoleon/louis18.html">https://library.brown.edu/cds/napoleon/louis18.html</a>                             
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Norman, Jeremy. “Editio Princeps of Euclid’s Elements, the Most Famous Textbook Ever Published.” History of Information. <a href = "https://www.historyofinformation.com/detail.php?entryid=382">https://www.historyofinformation.com/detail.php?entryid=382</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                O’Conner, John, Edmund Robertson. “Adrien-Marie Legendre.” MacTutor. School of Mathematics and Statistics, University of St. Andrews, 1996. <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Legendre/">https://mathshistory.st-andrews.ac.uk/Biographies/Legendre/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                O’Conner, John, Edmund Robertson. “Evariste Galois”. MacTutor. School of Mathematics and Statistics,  University of St. Andrews, 1996. <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Galois/">https://mathshistory.st-andrews.ac.uk/Biographies/Galois/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                O’Conner, John, Edmund Robertson. “Joseph Liouville.” MacTutor. School of Mathematics and Statistics, University of St. Andrews, 1996. <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Liouville/">https://mathshistory.st-andrews.ac.uk/Biographies/Liouville/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                O’Conner, John, Edmund Robertson. “Joseph-Louis Lagrange.” MacTutor. School of Mathematics and Statistics, University of St. Andrews, 1996. <a href = "https://mathshistory.st-andrews.ac.uk/Biographies/Lagrange/">https://mathshistory.st-andrews.ac.uk/Biographies/Lagrange/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Osamuyi, Osarumen. “How do Noise-Canceling Headphones Work?” Techcabal. 2015. <a href = "https://techcabal.com/2015/11/19/how-do-noise-cancelling-headphones-work/">https://techcabal.com/2015/11/19/how-do-noise-cancelling-headphones-work/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Rigatelli, Laura Toti. <em>Evariste Galois (1811-1832)</em>. Washington D.C: Library of Congress, 1996. <a href = "https://books.google.com.mx/books?id=zCjyBwAAQBAJ&printsec=copyright#v=onepage&q&f=false">https://books.google.com.mx/books?id=zCjyBwAAQBAJ&printsec=copyright#v=onepage&q&f=false</a> 
+
+                            </div>
+                        </div>
+                    </li>
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Strick, Heinz Klaus. “Evariste Galois.” Maths History. St. Andrews University. <a href = "https://mathshistory.st-andrews.ac.uk/Strick/galois.pdf">https://mathshistory.st-andrews.ac.uk/Strick/galois.pdf</a> 
+
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class = "bib-element">
+                        <div class = "bib-element-container">
+                            <div class = "bib-info">
+
+                                Yanes, Javier. “Évariste Galois, the Teenager Who Revolutionized Mathematics.” OpenMind BBVA. 2016. <a href = "https://www.bbvaopenmind.com/en/science/mathematics/evariste-galois-the-adolescent-who-revolutionized-mathematics/">https://www.bbvaopenmind.com/en/science/mathematics/evariste-galois-the-adolescent-who-revolutionized-mathematics/</a>
+
+                            </div>
+                        </div>
+                    </li>
+
+
+                </ol>
+                
         </div>
     </div>
 </body>
