--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ But as is wont with history’s poster children, the hidden talent never saw the
                         <div class = "bib-element-container">
                             <div class = "bib-info">
 
-                                “Life of Galois.” Wellesley College. <a href = "https://palmer.wellesley.edu/~ivolic/pdf/Classes/MATH306GaloisTheorySpring12/Handouts/GaloisBio.pdf">https://palmer.wellesley.edu/~ivolic/pdf/Classes/MATH306GaloisTheorySpring12/Handouts/GaloisBio.pdf</a>
+                                “Life of Galois.” Wellesley College. <a href = "https://palmer.wellesley.edu/~ivolic/pdf/Classes/MATH306GaloisTheorySpring12/Handouts/GaloisBio.pdf">https://palmer.wellesley.edu/~ivolic/pdf/<br>Classes/MATH306GaloisTheorySpring12/Handouts/GaloisBio.pdf</a>
 
                             </div>
                         </div>
@@ -267,7 +267,7 @@ But as is wont with history’s poster children, the hidden talent never saw the
                         <div class = "bib-element-container">
                             <div class = "bib-info">
 
-                                “Louis XVIII of France.” <a href = "http://www.1066.co.nz/Mosaic%20DVD/whoswho/text/Louis_XVIII_of_France[1].htm">http://www.1066.co.nz/Mosaic%20DVD/whoswho/text/Louis_XVIII_of_France[1].htm</a>
+                                “Louis XVIII of France.” <a href = "http://www.1066.co.nz/Mosaic%20DVD/whoswho/text/Louis_XVIII_of_France[1].htm">http://www.1066.co.nz/Mosaic%20DVD/<br>whoswho/text/Louis_XVIII_of_France[1].htm</a>
 
                             </div>
                         </div>
